--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 	<body>
 		<ul id="nav">
 			<li><img id="logo" src="images/beards_watch.jpg" alt="Banner Image"></li>
-			<li class="nav"><a href="home.html"><h2>Home</h2></a></li>
+			<li class="nav"><a href="index.html"><h2>Home</h2></a></li>
 			<li class="nav"><a href="episodes.html"><h2 >Episodes</h2></a></li>
 			<li class="nav"><a href="calender.html"><h2>Calendar</h2></a></li>
 			<li class="nav"><a href="gallery.html"><h2>Gallery</h2></a></li>
