Added social media icons

--- a/episodes.html
+++ b/episodes.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 		<link rel="stylesheet" type="text/css" href="brandstyle.css" />
 		<link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	
 	<body>
@@ -78,7 +79,13 @@
 </div>
 			
 		<footer> 
-		<p>"Podcast is coming!"<br><br></p>
+		<p>"Podcast is coming!"<br></p>
+		<P> Follow Us:</P>
+			<a href="https://www.facebook.com/TheBeardsWatchPodcast/" class="fa fa-facebook"></a>
+			<a href="https://twitter.com/thebeardswatch" class="fa fa-twitter"></a>
+			<a href="https://www.youtube.com/channel/UC-xpYOs3YW6oyjSlaB9i50Q" class="fa fa-youtube"></a>
+			<a href="https://www.instagram.com/thebeardswatch/" class="fa fa-instagram"></a>
+			<a href="https://soundcloud.com/thebeardswatch" class= "fa fa-soundcloud"></a>
 		
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
