--- a/calender.html
+++ b/calender.html
@@ -5,9 +5,9 @@
 		<title>Calendar</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
 		<link rel="stylesheet" type="text/css" href="brandstyle.css" />
 		<link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		
 		<style>
 * {box-sizing: border-box;}
@@ -179,7 +179,13 @@ body {font-family: Verdana, sans-serif;}
 				
 		</div>
 		<footer> 
-			<p>"Podcast is coming!"<br><br></p>
+			<p>"Podcast is coming!"<br></p>
+      <P> Follow Us:</P>
+      <a href="https://www.facebook.com/TheBeardsWatchPodcast/" class="fa fa-facebook"></a>
+      <a href="https://twitter.com/thebeardswatch" class="fa fa-twitter"></a>
+      <a href="https://www.youtube.com/channel/UC-xpYOs3YW6oyjSlaB9i50Q" class="fa fa-youtube"></a>
+      <a href="https://www.instagram.com/thebeardswatch/" class="fa fa-instagram"></a>
+      <a href="https://soundcloud.com/thebeardswatch" class= "fa fa-soundcloud"></a>
 		
 	</footer>
 
