Updated episodes and Merch

--- a/episodes.html
+++ b/episodes.html
@@ -34,15 +34,15 @@
     <div class="card-header" id="headingOne">
       <h5 class="mb-0">
         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-         <strong>The Beard's Watch - Episode 80 This is Halloween</strong>
+         <strong>The Beard's Watch - Episode 125 - Bunches of Hocus Pocus</strong>
         </button>
       </h5>
     </div>
 
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
       <div class="card-body">
-      	<a class="watch" href="https://soundcloud.com/thebeardswatch/episode-80-this-is-halloween"><strong>Watch Now</strong></a><br>
-        - Jacob, Dillon, Corey, and Jeebs talked everything Halloween from stories, candy, movies and more! Triple Whammy Sauce Notebook: A song that reminds you of an Ex, and your favorite skittle flavor? Give your ears what they want!
+      	<a class="watch" href="https://soundcloud.com/thebeardswatch/episode-125-bunches-of-hocus-pocus"><strong>Watch Now</strong></a><br>
+        - Jacob, Corey, Baker, Jerriana, & Bridgette gather in the basement to discuss all things Halloween from favorite movies, candy, traditions, and scary stories!
       </div>
     </div>
   </div>
@@ -50,14 +50,14 @@
     <div class="card-header" id="headingTwo">
       <h5 class="mb-0">
         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-         <strong>The Beard's Watch - Episode 79 Binging on Dillon</strong>
+         <strong>The Beard's Watch - Episode 124 - Last Laugh Defeat</strong>
         </button>
       </h5>
     </div>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
       <div class="card-body">
-      	<a class="watch" href="https://www.youtube.com/watch?v=VSgSSz3v7AU&feature=youtu.be"><strong>Watch Now</strong></a></br>
-        -Jacob, Corey, and Jeebs are joined by first timer Dillon Prentice as we tell some college stories, binging on TV shows, or watching live, Halloween stores, and calling out sick from work! All that and more!
+      	<a class="watch" href="https://soundcloud.com/thebeardswatch/episode-124-last-laugh-defeat"><strong>Watch Now</strong></a></br>
+        -Jacob, Duvall, Jeebs, & Corey gather together to discuss the start of the NBA season, the Bosa decision, Hornets, Panthers, Nintendo characters, and Mascots!
       </div>
     </div>
   </div>
@@ -65,19 +65,68 @@
     <div class="card-header" id="headingThree">
       <h5 class="mb-0">
         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          <strong>The Beard's Watch - Episode 78 Audi Smells Football and Halloween</strong>
+          <strong>The Beard's Watch - Episode 123 - Kevin Petriella</strong>
         </button>
       </h5>
     </div>
     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
       <div class="card-body">
-      	<a class="watch" href="https://www.youtube.com/watch?v=yfYBUOcbj8g&feature=youtu.be"><strong>Watch Now</strong></a><br>
-        - ‎Jacob and Luhrs are joined by Audi and Jeebs for round 2! We talked Panthers, Eagles, and told some Halloween stories. Plus whats your best ICE story? All that and more!
+      	<a class="watch" href="https://soundcloud.com/thebeardswatch/episode-123-kevin-petriella"><strong>Watch Now</strong></a><br>
+        - ‎Jacob & Jeebs are joined by first timer Kevin Petriella to discuss all things Cleveland, Browns, Cavs, LeBron, Indians, and more! Plus our Triple Whammy Sauce Escape 109 notebook Q was: Do you think an woman will ever play in the NFL?
       </div>
     </div>
   </div>
 </div>
-			
+<div class="card">
+    <div class="card-header" id="headingFour">
+      <h5 class="mb-0">
+        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+          <strong>The Beard's Watch - Episode 122 - Alive With 5</strong>
+        </button>
+      </h5>
+    </div>
+    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+      <div class="card-body">
+      	<a class="watch" href="https://soundcloud.com/thebeardswatch/episode-122-alive-with-5"><strong>Watch Now</strong></a><br>
+        - ‎Jacob, Duvall, Jeebs, Adam, & Tyler all got together and discussed the big moves the Panthers made, what's next for the Hornets, and busted open the Triple Whammy Warehouse Distillery notebook for 5 questions!
+Most underrated sandwich? Favorite President? What Panther player would you be for a day? Have a country, where, and what name? Roomate, Steve Smith, Marshawn Lynch?
+      </div>
+    </div>
+  </div>
+<div class="card">
+    <div class="card-header" id="headingFive">
+      <h5 class="mb-0">
+        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+          <strong>The Beard's Watch - Episode 121 - Survivor David vs Goliath</strong>
+        </button>
+      </h5>
+    </div>
+    <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
+      <div class="card-body">
+      	<a class="watch" href="https://soundcloud.com/thebeardswatch/episode-121-survivor-david-vs-goliath"><strong>Watch Now</strong></a><br>
+        - ‎Jacob, Jeebs, Adam, Greg, Buck, and Lindsey all discussed their picks for the fantasy game for the upcoming season on Survivor. How the season will shake out and more! Plus the Warehouse Distillery Escape109 notebook brought: Who would win in a fist fight? Bill Belichick or Tom Brady? Best drunk food?
+      </div>
+    </div>
+  </div>
+ <div class="card">
+    <div class="card-header" id="headingSix">
+      <h5 class="mb-0">
+        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+          <strong>The Beard's Watch - Episode 120 - Heather Powell</strong>
+        </button>
+      </h5>
+    </div>
+    <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
+      <div class="card-body">
+      	<a class="watch" href="https://soundcloud.com/thebeardswatch/episode-120-heather-powell"><strong>Watch Now</strong></a><br>
+        - ‎Jacob, Jeebs, & Corey are joined by first timer Heather Powell as she describes our first encounter at Saeeds, her career as a EM Clinical Pharmacist, and her miniature horse hobby! Our Warehouse Distillery Escape109 notebook question: Would you rather run with bulls, or swim with sharks?
+      </div>
+    </div>
+  </div>
+
+
+
+
 		<footer> 
 		<p>"Podcast is coming!"<br></p>
 		<P> Follow Us:</P>
