--- a/shop.html
+++ b/shop.html
@@ -31,22 +31,22 @@
 			
 			<div class="container">
 					<figure>
-						<a href="https://teespring.com/the-beard-s-watch-fresh-logo-g#pid=2&cid=573&sid=front"><img src="images/shirt.jpg" alt="Banner Image" width=300 height=300></a>
+						<a href="https://teespring.com/the-beard-s-watch-more-options?79rc5#pid=369&cid=6525&sid=front"><img src="images/shirt.jpg" alt="Banner Image" width=300 height=300></a>
 						<figcaption class="gallery">T-Shirts</figcaption></figure>
 					<figure>
-						<a href="https://teespring.com/the-beard-s-watch-fresh-logo-g#pid=401&cid=6651&sid=front"><img src="images/sticker.jpg" alt="Banner Image" width=300 height=300></a>
+						<a href="https://teespring.com/the-beard-s-watch-more-options?79rc5#pid=663&cid=102930&sid=front"><img src="images/sticker.jpg" alt="Banner Image" width=300 height=300></a>
 						<figcaption class="gallery">Stickers</figcaption></figure>
 					<figure>
-						<a href="https://teespring.com/the-beard-s-watch-fresh-logo-g#pid=212&cid=5822&sid=front"><img src="images/hoody.jpg" alt="Banner Image" width=300 height=300></a>
+						<a href="https://teespring.com/the-beard-s-watch-more-options?79rc5#pid=212&cid=5840&sid=front"><img src="images/hoody.jpg" alt="Banner Image" width=300 height=300></a>
 						<figcaption class="gallery">Hoodies</figcaption></figure>
 					<figure>
-						<a href="https://teespring.com/the-beard-s-watch-fresh-logo-g#pid=14&cid=423&sid=front"><img src="images/tank.jpg" alt="Banner Image" width=300 height=300></a>
+						<a href="https://teespring.com/the-beard-s-watch-more-options?79rc5#pid=117&cid=5812&sid=front"><img src="images/tank.jpg" alt="Banner Image" width=300 height=300></a>
 						<figcaption class="gallery">Tank Tops</figcaption></figure>
 					<figure>
-						<a href="https://teespring.com/the-beard-s-watch-fresh-logo-g#pid=11&cid=384&sid=front"><img src="images/longsleeve.jpg" alt="Banner Image" width=300 height=300></a>
+						<a href="https://teespring.com/the-beard-s-watch-more-options?79rc5#pid=11&cid=2501&sid=front"><img src="images/longsleeve.jpg" alt="Banner Image" width=300 height=300></a>
 						<figcaption class="gallery">Long Sleeve Shirts</figcaption></figure>
 					<figure>
-						<a href="https://teespring.com/the-beard-s-watch-fresh-logo-g#pid=522&cid=101878&sid=front"><img src="images/longsleeve.jpg" alt="Banner Image" width=300 height=300></a>
+						<a href="https://teespring.com/the-beard-s-watch-more-options?79rc5#pid=658&cid=102951&sid=front"><img src="images/mug.jpg" alt="Banner Image" width=300 height=300></a>
 						<figcaption class="gallery">Mugs</figcaption></figure>
 						
 			</div>
