--- a/calender.html
+++ b/calender.html
@@ -126,7 +126,7 @@ body {font-family: Verdana, sans-serif;}
     <li class="next">&#10095;</li>
     <li>
       October<br>
-      <span style="font-size:18px">2017</span>
+      <span style="font-size:18px">2018</span>
     </li>
   </ul>
 </div>
@@ -143,34 +143,34 @@ body {font-family: Verdana, sans-serif;}
 
 <ul class="days">  
   <li><strong>1</strong><br><br><br><br></li>
-  <li><strong>2</strong><br>Episode 77 - Audi Smells Football and Halloween</li>
+  <li><strong>2</strong><br></li>
   <li><strong>3</strong><br><br><br><br></li>
   <li><strong>4</strong><br><br><br><br></li>
   <li><strong>5</strong><br><br><br><br></li>
   <li><strong>6</strong><br><br><br><br></li>
-  <li><strong>7</strong><br>Host and Guest Podcast Dance Off<br><br></li>
+  <li><strong>7</strong><br><br><br></li>
   <li><strong>8</strong><br><br><br></li>
-  <li><strong>9</strong><br>Episode 78 - Alan Fuehring</li>
+  <li><strong>9</strong><br></li>
   <li><strong>10<br><br><br></strong></li>
   <li><strong>11</strong><br><br><br></li>
   <li><strong>12</strong><br><br><br></li>
   <li><strong>13</strong><br><br><br></li>
   <li><strong>14</strong><br><br><br></li>
   <li><strong>15</strong><br><br><br></li>
-  <li><strong>16</strong><br>Episode 79- Binging on Dillon<br><br></li>
+  <li><strong>16</strong><br><br><br></li>
   <li><strong>17</strong><br><br><br></li>
   <li><strong>18</strong><br><br><br></li>
   <li><strong>19</strong><br><br><br></li>
-  <li><strong>20</strong><br>Special Episode - Live from Yams Fest<br><br></li>
+  <li><strong>20</strong><br><br><br></li>
   <li><strong>21</strong><br><br><br></li>
-  <li><strong>22</strong><br>Episode 80 - This is Halloween<br><br></li>
+  <li><strong>22</strong><br><br><br></li>
   <li><strong>23</strong><br><br><br></li>
   <li><strong>24</strong><br><br><br></li>
   <li><strong>25</strong><br><br><br></li>
   <li><strong>26</strong><br><br><br></li>
   <li><strong>27</strong><br><br><br></li>
   <li><strong>28</strong><br><br><br></li>
-  <li><strong>29</strong><br>Episode 81 - Trick or Podcast<br><br></li>
+  <li><strong>29</strong><br><br><br></li>
   <li><strong>30</strong><br><br><br></li>
   <li><strong>31</strong><br><br><br></li>
 </ul>
